# home-planner

./: .gitignore  Dockerfile  config.py  database.py  deps.py  docker-compose.yml  ingredients.txt  main.py  models.py  pyproject.toml  utils.py
.claude/: settings.local.json
memory/: MEMORY.md  feedback_uv.md
routers/: htmx.py  planner.py  recipes.py  shopping.py
static/: style.css
templates/: base.html  planner.html  recipe_detail.html  recipe_form.html  recipes.html  shopping_list.html
templates/partials/: day_slot.html  ingredient_row.html
