[project]
name = "home-planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
